XMLSerializer: Fix existence check of xmlns="".

The URI value for xmlns="" stored in |Namespace| is an empty string
because it's based on attribute value, and |namespace_uri| argument of
AppendNamespace() is a null string because it's based on
QualifiedName::NamespaceURI(). AppendNamespace() needs to care of this
difference.

Bug: 769626
Change-Id: Ib38bbacd7652f359e526c26f180c6a9ef78da109
Reviewed-on: https://chromium-review.googlesource.com/704274
Commit-Queue: Kent Tamura <tkent@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506993}
Former-commit-id: 4f839ffc0c3887ce9df2eb58517437fcff2f2026